# Brand-Intel-Agent

./: Mamaearth.md  README.md  Zzqqxxnonexistentbrandxyz123.md  config.py  main.py  output.xlsx  pyproject.toml  schemas.py
agents/: discovery_agent.py  listing_quality_agent.py  marketplace_agent.py  url_extractor.py  weakness_agent.py
outputs/: excel_writer.py  markdown_writer.py
utils/: browser.py  logger.py
