[project]
name = "brand-intel-agent"
version = "0.1.0"
description = "E-Commerce Brand Intelligence Agent (Amazon.in)"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.2",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false